<resources>
    <string name="app_name">Motivation</string>
    <string name="all">ALL</string>
    <string name="sunny">Sunny</string>
    <string name="happy">Happy</string>
    <string name="hi_kotlin">Hi, Kotlin</string>
    <string name="motivation_text">MOTIVATION TEXT</string>
    <string name="new_phrase">New Phrase</string>
    <string name="lets_start">Let\'s start?</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="save">Save</string>
    <string name="name_mandatory">Please tell us your name</string>
</resources>